@startuml Proyecto_Venta_Entradas
title Diagrama de Clases (Proyecto Venta de Entradas)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #FDF6E3
    BorderColor #586675
    ArrowColor #2c2a36
}

' ===================== PERSONAS =====================

abstract class Persona {
    - nombres : String
    - apellidos : String
    - dni : String
    - contrasena : String
}

class Cliente {
    + comprar() : boolean
    + agregarTarjeta(t : Tarjeta) : boolean
    + eliminarTarjeta(t : Tarjeta) : boolean
    + consultarCompras() : void
    + consultarZonasDisponibles() : void
}

class Administrador {
    + registrarConcierto(c : Concierto) : boolean
    + eliminarConcierto(c : Concierto) : boolean
    + registrarZona(z : Zona) : boolean
    + modificarZona(z : Zona) : boolean
    + consultarVentas() : void
}

Persona <|-- Cliente
Persona <|-- Administrador


' ===================== CONCIERTOS =====================

class Concierto {
    - nombre : String
    - fecha : Date

    + agregarZona(z : Zona) : boolean
    + eliminarZona(nombre : String) : boolean
}

class Zona {
    - nombre : String
    - precio : double
    - capacidadTotal : int

    + getDisponibles() : int
}

class Entrada {
    - numero : int
    - asiento : String
    - estado : String
    ' estado : DISPONIBLE , VENDIDA

    + vender() : boolean
    + anular() : boolean
}


' ===================== VENTAS =====================

class Venta {
    - fecha : Date
    - monto : double

    + anularEntrada() : boolean
    + calcularMonto() : double
}

class DetalleVenta {
    - precioUnitario : double
    - estado : String
    - fechaAnulacion : Date

    ' estado: ACTIVO, ANULADO
}

class Tarjeta {
    - numero : long
    - nombreTitular : String
    - fechaVencimiento : String
    - cvv : int

    + getNumeroEnmascarado() : String
}

class TipoTarjeta {
    - nombre : String
    ' nombre : VISA, MASTERCARD, DINNERS, AMERICAN EXPRESS
    - longitudNumero : int
    - longitudCVV : int
    - porcentajeDescuento : double

    + validarNumero(numero : long) : boolean
}


' ===================== RELACIONES =====================

Concierto "1" *-- "1..4" Zona
Zona "1" *-- "1..*" Entrada

Cliente "1" --> "0..*" Tarjeta
Cliente "1" --> "0..*" Venta

Tarjeta "1" <-- "0..*" Venta
Tarjeta "*" --> "1" TipoTarjeta

Venta "1" *-- "1..4" DetalleVenta
DetalleVenta "*" --> "1" Entrada

@enduml
